
[dependencies]
proc-macro2="1"
quote="1"
syn="2"

[dependencies.enum-ordinalize]
default-features=false
version="4.2"
features=["derive"]

[dev-dependencies]
assert-eq-float="0.1"
rustversion="1"

[dev-dependencies.syn]
version="2"
features=["full"]

[features]
Clone=[]
Copy=[]
Debug=[]
Default=[]
Deref=[]
DerefMut=[]
Eq=[]
Hash=[]
Into=[]
Ord=[]
PartialEq=[]
PartialOrd=[]
default=["Debug", "Clone", "Copy", "PartialEq", "Eq", "PartialOrd", "Ord", "Hash", "Default", "Deref", "DerefMut", "Into"]
full=["syn/full"]

[lib]
proc-macro=true

[package]
description="This crate offers procedural macros designed to facilitate the swift implementation of Rust's built-in traits."
edition="2021"
homepage="https://magiclen.org/educe"
license="MIT"
name="educe"
repository="https://github.com/magiclen/educe"
rust-version="1.60"
version="0.5.11"
authors=["Magic Len <len@magiclen.org>"]
categories=["no-std", "rust-patterns"]
include=["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
keywords=["derive", "macro", "trait", "field", "procedural"]

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
all-features=true
rustdoc-args=["--cfg", "docsrs"]